<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.NewRecipeFragment">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/name_category"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/small_spacing"
            android:text="@string/kitchen_category" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/ll_spinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="start"
            android:orientation="horizontal"
            android:padding="@dimen/common_spacing">

            <TextView
                android:id="@+id/category"
                android:layout_width="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_height="@dimen/size_spinner"
                android:contentDescription="@string/select_kitchen_category"
                android:textSize="@dimen/font_category_edit"
                tools:text="category"
                tools:ignore="MissingConstraints" />

            <Spinner
                android:id="@+id/category_spinner"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/size_spinner"
                app:layout_constraintEnd_toEndOf="parent"
                android:padding="@dimen/common_spacing"
                tools:ignore="MissingConstraints" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <TextView
            android:id="@+id/name_author"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/small_spacing"
            android:text="@string/author_name" />

        <EditText
            android:id="@+id/author"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/author"
            android:padding="@dimen/common_spacing"
            android:autofillHints="@string/author"
            android:inputType="text" />

        <TextView
            android:id="@+id/name_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/small_spacing"
            android:text="@string/title"
            android:textSize="@dimen/font_category" />

        <EditText
            android:id="@+id/title"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="80dp"
            android:gravity="start|top"
            android:hint="@string/name_of_recipe"
            android:inputType="textMultiLine"
            android:padding="@dimen/common_spacing"
            app:layout_constraintBottom_toTopOf="@id/bottomAppBar"
            android:autofillHints="@string/name_of_recipe" />
    </androidx.appcompat.widget.LinearLayoutCompat>


    <com.google.android.material.bottomappbar.BottomAppBar
        android:id="@+id/bottomAppBar"
        style="@style/Widget.MaterialComponents.BottomAppBar.Colored"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        app:fabAlignmentMode="center"
        app:fabAnimationMode="scale"
        app:fabCradleVerticalOffset="0dp" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/ok"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/click_ok_button"
        app:layout_anchor="@id/bottomAppBar"
        app:srcCompat="@drawable/ic_baseline_add_24dp" />
</androidx.coordinatorlayout.widget.CoordinatorLayout>
